--- a/styles.css
+++ b/styles.css
@@ -606,6 +606,18 @@ input, textarea {
     font-size: 14px;
 }
 
+input:user-invalid, textarea:user-invalid {
+    border-color: red;
+    background-color: #ffe6e6;
+    border-width: 3px;
+}
+
+input:valid, textarea:valid {
+    border-color: green;
+    background-color: #e6ffe6;
+    border-width: 3px;
+}
+
 textarea {
     resize: vertical;
     min-height: 15px;
