--- a/styles.css
+++ b/styles.css
@@ -591,16 +591,11 @@ legend {
     color: var(--orange);
 }
 
-#contactpageForm form-field {
-    display: flex;
-    flex-direction: column;
-    height: 100px;
-    padding: 10px;
-}
-
 input, textarea {
-    width: 100%;
-    padding: 8px;
+    width: 98%;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 14px;
@@ -630,10 +625,6 @@ input.flash, textarea.flash {
 textarea {
     resize: vertical;
     min-height: 15px;
-}
-
-#name, #email, #comments {
-    width: 100%;
 }
 
 .required {
